[workspace]
resolver = "2"
members = [
  "lmml",
  "lmml-parser",
  "lmml-cli"
]

[workspace.package]
version = "0.5.4"
authors = ["yuma14"]
repository = "https://github.com/yuma140902/lmml"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
lmml = { version = "0.5.4", path = "./lmml/" }
lmml-parser = { version = "0.5.4", path = "./lmml-parser" }

anyhow = "1.0.95"
array-init = "2.1.0"
clap = { version = "4.5.28", features = [ "derive" ] }
nom = "7.1.3"
rodio = "0.20.1"
