[workspace]
resolver = "2"
members = ["lmml", "lmml-cli", "lmml-parser"]

[workspace.package]
version = "0.6.1"
authors = ["yuma14"]
edition = "2024"
repository = "https://github.com/yuma140902/lmml"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
lmml = { path = "./lmml/", version = "0.6.1" }
lmml-parser = { path = "./lmml-parser", version = "0.6.1" }

anyhow = "1.0.104"
array-init = "2.1.0"
clap = { version = "4.6.2", features = ["derive"] }
nom = "8.0.0"
nom-language = "0.1.0"
rodio = "0.22.2"
