[package]
name = "lmml-cli"
description = "CLI tool for LMML"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
array-init = "2.1.0"
clap = { version = "4.5.1", features = [ "derive" ] }
lmml = { version = "0.5.0", path = "../lmml" }
lmml-parser = { version = "0.5.0", path = "../lmml-parser" }
nom = "7.1.3"
rodio = "0.18.0"

[[bin]]
name = "lmml"
path = "src/main.rs"
