[package]
name = "lmml-cli"
description = "CLI tool for LMML"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmml.workspace = true
lmml-parser.workspace = true

anyhow.workspace = true
array-init.workspace = true
clap.workspace = true
nom.workspace = true
nom-language.workspace = true
rodio.workspace = true

[[bin]]
name = "lmml"
path = "src/main.rs"
