[package]
name = "lmml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI tool for LMML"
readme = "../README.md"
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lmml"
path = "src/main.rs"

[dependencies]
lmml.workspace = true
lmml-parser.workspace = true

anyhow.workspace = true
array-init.workspace = true
clap.workspace = true
nom.workspace = true
nom-language.workspace = true
rodio.workspace = true
