[package]
name = "lmml-parser"
description = "LMML parser"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
lmml = { version = "0.0.0", path = "../lmml" }
