[package]
name = "lmml-parser"
description = "LMML parser"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
lmml = { version = "0.1.0", path = "../lmml" }
