[package]
name = "lmml"
description = "LMML Music Macro Language"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
