[package]
name = "lmml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LMML Music Macro Language"
readme = "../README.md"
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init.workspace = true
rodio.workspace = true
